--- a/ETopo/Properties/Resources.resx
+++ b/ETopo/Properties/Resources.resx
@@ -121,4 +121,13 @@
   <data name="cell" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cell.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FileReadError" xml:space="preserve">
+    <value>Ошибка чтения файла</value>
+  </data>
+  <data name="ETopo" xml:space="preserve">
+    <value>ETopo</value>
+  </data>
+  <data name="Saved" xml:space="preserve">
+    <value>Сохранено</value>
+  </data>
 </root>
