--- a/ETopo/Graph.resx
+++ b/ETopo/Graph.resx
@@ -123,4 +123,27 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>46</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAQAAAABAAoAQAAJgAAACAgEAAAAAQA6AIAAE4BAAAoAAAAEAAAACAAAAABAAQAAAAAAIAA
+        AAAAAAAAAAAAABAAAAAQAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAICAgADAwMAAAAD/AAD/
+        AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAAAAACAAAAAAAAACHiAAAAAAABwGAcAAAAAAAgQgA
+        AAAABwiBCIBwAAAAcIEHdwAAAIiIiHERF4gAgRcYcAhwAAAHAIAXAHAAAAgHABBwgAAAAIAIEAgAAAAA
+        CHgXgAAAAAAAAHAAAAAAAAAAgAAAAAAAAAAAAAAA//8AAP7/AAD8PwAA+B8AAPCPAADghwAA5IcAAMAA
+        AADAZwAA5ScAAONHAADwDwAA+B8AAP9/AAD/fwAA//8AACgAAAAgAAAAQAAAAAEABAAAAAAAAAIAAAAA
+        AAAAAAAAEAAAABAAAAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAgICAAMDAwAAAAP8AAP8AAAD/
+        /wD/AAAA/wD/AP//AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAAAAAABwAA
+        AAAAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAACHcQd4AAAAAAAAAAAAAACH
+        AAEHAHgAAAAAAAAAAAAIAAARBwAAgAAAAAAAAAAAgAB4cQCHAAgAAAAAAAAAAAAIABEAAIAAAAAAAAAA
+        AAcAeAgRAAiHAHAAAAAAAACABwiIEQCHAHAIAAAAAAAAcAgAdxEAiACABwAAAAAAAHAAAABxCBERcAcA
+        AAAAAAAAAAAAgYEREREReIgAAAiIiIiIiIh3d3d3d3d3iAAIiBERERF4GAAACHcAAAAAAABwCIgRgBGA
+        AIAHAAAAAAAAcAcAiAARcQBwBwAAAAAAAIAHCHgAEYiIAAgAAAAAAAAHAHgAABGAhwBwAAAAAAAAAAAH
+        AAAXAHAHAAAAAAAAAACAAAcAF3AACAAAAAAAAAAACAAAcBAAB4AAAAAAAAAAAAAHAHAQAHAAAAAAAAAA
+        AAAAAIiAF4gAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAcAAAAAAA
+        AAAAAAAAAAAAAHAAAAAAAAAAAAAAAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///////7////+
+        /////v////7////wj///wIP//4CB//8AwP//DPD//gjgf/wgzD/8MMw//HyAP//8AAPgAAAA4AA+P/wB
+        HD/8Mww//CMAP/4PEH//DzD//wMA//+BAf//4Qf///EP////f////3////9/////f////3///////w==
+</value>
+  </data>
 </root>
